Fixed spacing a bit on subjects footer. Added a fixed height in pixels to the html css, in an attempt to make the page stay on the ipad screen properly. Have to build to try it out.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -14,8 +14,7 @@
 }
 
 html {
-    padding-bottom: 50px;
-    min-height: 100%;
+    max-height: 768px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     position: relative;
